2008-08-21  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=19656
        [SOUP] The gio code should call didFail() instead of
        didFinishLoading() in case of error

        In case of error call didFail() instead of didReceiveResponse() and
        didFinishLoading().

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::networkErrorForFile):
        (WebCore::readCallback):
        (WebCore::openCallback):
        (WebCore::queryInfoCallback):

Canonical link: https://commits.webkit.org/28278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35872 268f45cc-cd09-0410-ab3c-d52691b4dbfc